[gd_scene load_steps=2 format=3 uid="uid://cord5w6w2wku8"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_dyq8q"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyq8q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 391.0
offset_bottom = 77.0
color = Color(0.196078, 0.607843, 0.301961, 0.509804)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Slider1" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Slider2" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnMove" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Move"

[node name="BtnRotate" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rotate"

[node name="BtnScale" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scale"

[node name="Time" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Time
"

[node name="Reset" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/Slider1" to="." method="_on_slider_1_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/Slider1" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/Slider2" to="." method="_on_slider_2_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/Slider2" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/BtnMove" to="." method="_on_btn_move_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/BtnRotate" to="." method="_on_btn_rotate_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/BtnScale" to="." method="_on_btn_scale_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Time" to="." method="_on_btn_time_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_btn_reset_pressed"]
